--- a/app/static/styles-deck.css
+++ b/app/static/styles-deck.css
@@ -180,12 +180,14 @@ body {
     background-color: #5561c8;
 }
 #no-cards {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1rem;
     font-size: 1rem;
     color: black;
+    justify-content: center;
+    align-items: center;
     opacity: 0.25;
 }
 .new-card-zone {
@@ -415,7 +417,4 @@ body {
     background-color: black;
     opacity: 0.3;
     z-index: 10;
-}
-zone-3-2 {
-    display: none;
 }
