--- a/app/static/styles-new-user.css
+++ b/app/static/styles-new-user.css
@@ -93,7 +93,6 @@ body {
     flex: 1;
     flex-direction: column;
     padding: 1rem;
-    gap: 0.8rem;
     /* border: 5px dashed black; */
 }
 #new-username-input {
@@ -107,6 +106,7 @@ body {
     display: flex;
     width: 60%;
     min-height: 0;
+    margin-top: 0.8rem;
     color: white;
     font-family: sans-serif;
     font-size: 1rem;
@@ -117,6 +117,7 @@ body {
     align-items: center;
 }
 .continue:hover {
+    margin-top: calc(0.8rem + 2px);
     color: black;
     background-color: #858dd8;
     border-bottom-width: 1px;
